deploy-gry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: module-gry
  labels:
    app: module-gry
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: module-gry
      version: v1
  template:
    metadata:
      labels:
        app: module-gry
        version: v1
    spec:
      serviceAccountName: default
      containers:
      - name: module-gry
        image: default-route-openshift-image-registry.apps.ocp.lab.cloudpak.site/labproj08/module-gry:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
        securityContext:
          runAsUser: 1000
