deploy-info.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: module-info
  labels:
    app: module-info
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: module-info
      version: v1
  template:
    metadata:
      labels:
        app: module-info
        version: v1
    spec:      
      serviceAccountName: default
      containers:
      - name: module-info
        image: image-registry.openshift-image-registry.svc:5000/labproj08/module-info:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources: {}
status: {}
