deploy-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: mysql
    service: mysql
spec:
  ports:
  - port: 3306
    name: tcp
  selector:
    app: mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
      version: v1
  template:
    metadata:
      labels:
        app: mysql
        version: v1
    spec:
      containers:
      - name: mysql
        image: image-registry.openshift-image-registry.svc:5000/labproj08/mysql:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3306
        args: ["--default-authentication-plugin","mysql_native_password"]
        volumeMounts:
        - name: var-lib-mysql
          mountPath: /var/lib/mysql
      volumes:
      - name: var-lib-mysql
        persistentVolumeClaim:
          claimName: pvc-mysql  
      securityContext:
        runAsUser: 1000
status: {}
