svc-gry.yaml
apiVersion: v1
kind: Service
metadata:
  name: module-gry
  labels:
    app: module-gry
    service: module-gry
spec:
  ports:
  - port: 8081
    name: http
  selector:
    app: module-gry
