svc-info.yaml
apiVersion: v1
kind: Service
metadata:
  name: module-info
  labels:
    app: module-info
    service: module-info
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: module-info
